# downloader

./: CMakeLists.txt  conanfile.txt
src/: DownloadController.cpp  DownloadController.h  main.cpp
src/Downloader/: DownloadSettings.h  Downloader.cpp  Downloader.h  ReplyWrapper.cpp  ReplyWrapper.h  Writer.cpp  Writer.h
src/UI/: DownloadDialog.cpp  DownloadDialog.h  DownloadDialog.ui
